@@ -60,7 +60,7 @@ Adapter classes
   CICD_SECRET_CONTEXT_USAGE
   CICD_EXTERNAL_RUNNER_REF
 - Route strictness:
-  explicit `--adapter iac` fails closed on non-IaC text/config inputs (`IAC_UNSUPPORTED_FORMAT`), and explicit `--adapter cicd` fails closed on non-CI/CD inputs (`CICD_UNSUPPORTED_FORMAT`).
+  explicit `--adapter iac` fails closed on non-IaC text/config inputs (`IAC_UNSUPPORTED_FORMAT`), and explicit `--adapter cicd` fails closed on non-CI/CD inputs (`CICD_UNSUPPORTED_FORMAT`). CI/CD path/filename hints alone do not satisfy strict CI/CD route requirements without CI structure/signals.
 
 5) document (baseline signal lane)
 - Formats: .pdf, .docm, .xlsm, .rtf, .chm
